--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-todos></app-todos>
+<amplify-authenticator>
+  <ng-template
+    amplifySlot="authenticated"
+    let-user="user"
+    let-signOut="signOut">
+    <app-todos></app-todos>
+    <button (click)="signOut()">Sign out</button>
+  </ng-template>
+</amplify-authenticator>
