custom todo model to considere owner field

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     amplifySlot="authenticated"
     let-user="user"
     let-signOut="signOut">
-    <app-todos></app-todos>
+    <app-todos [userLogger]="user"></app-todos>
     <button (click)="signOut()">Sign out</button>
   </ng-template>
 </amplify-authenticator>
