--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<amplify-authenticator>
-  <ng-template
-    amplifySlot="authenticated"
-    let-user="user"
-    let-signOut="signOut">
-    <app-todos [userLogger]="user"></app-todos>
-    <button (click)="signOut()">Sign out</button>
-  </ng-template>
-</amplify-authenticator>
+<ui-pet-marketstore></ui-pet-marketstore>
+
+<!--<amplify-authenticator>-->
+<!--  <ng-template-->
+<!--    amplifySlot="authenticated"-->
+<!--    let-signOut="signOut"-->
+<!--    let-user="user">-->
+<!--    &lt;!&ndash;    <app-todos [userLogger]="user"></app-todos>&ndash;&gt;-->
+
+<!--    <button (click)="signOut()">Sign out</button>-->
+<!--  </ng-template>-->
+<!--</amplify-authenticator>-->
