--- a/src/app/pet-marketstore/pet-marketstore.component.html
+++ b/src/app/pet-marketstore/pet-marketstore.component.html
@@ -1,6 +1,6 @@
+<p-toast/>
 <div id="market-container">
-  <app-menu-bar></app-menu-bar>
-
+  <app-menu-bar *ngIf="!isAuthPage"></app-menu-bar>
   <!--      <div [@appUIAnimation]="o.isActivated ? o.activatedRoute : ''">-->
   <div class="">
     <router-outlet #o="outlet"></router-outlet>
