--- a/src/app/pet-marketstore/infra/components/auth/authentication/authentication.component.html
+++ b/src/app/pet-marketstore/infra/components/auth/authentication/authentication.component.html
@@ -1,4 +1,4 @@
-<amplify-authenticator>
+<amplify-authenticator [services]="">
   <ng-template
     amplifySlot="authenticated"
     let-signOut="signOut"
