--- a/src/app/pet-marketstore/infra/components/create-pet-dialog/create-pet-dialog.component.html
+++ b/src/app/pet-marketstore/infra/components/create-pet-dialog/create-pet-dialog.component.html
@@ -213,11 +213,12 @@
     </div>
     <div class="lg:mb-4 inline-flex flex-column gap-1 w-full">
       <label class="text-primary-500 text-lg font-semibold" for="bornDate">The Born day</label>
-      <input [ngClass]="{ 'ng-invalid ng-dirty': form['bornDate'].errors }"
-             class="bg-white-alpha-50 border-primary border-2 p-2 text-primary-500"
-             formControlName="bornDate" id="bornDate" pInputText
-             placeholder="Pet born date"
-             type="date" value="23/02/2021">
+      <p-calendar [dateFormat]="'yy-mm-dd'"
+                  [ngClass]="{ 'ng-invalid ng-dirty': form['bornDate'].errors }"
+                  class="bg-white-alpha-50 border-primary border-2 p-2 text-primary-500" formControlName="bornDate"
+                  id="bornDate"
+                  pInputText placeholder="Pet born date"
+                  showIcon/>
       @if (form['bornDate'].errors && form['bornDate'].errors['required']) {
         <p class="inline-block m-0 p-0" style="font-size: 10px">
           <span class="text-red-500">The born day is required</span>
