--- a/src/app/pet-marketstore/infra/components/list-pet/list-pet.component.html
+++ b/src/app/pet-marketstore/infra/components/list-pet/list-pet.component.html
@@ -22,11 +22,12 @@
         <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
       </th>
       <th>Pet Name</th>
-      <th>Image</th>
+      <th>Cover</th>
       <th>Price</th>
       <th>Category</th>
       <th>Rate</th>
-      <th>Status</th>
+      <th>Breed</th>
+      <th>Images</th>
       <th></th>
     </tr>
   </ng-template>
@@ -35,7 +36,9 @@
       <td>
         <p-tableCheckbox [value]="pet"></p-tableCheckbox>
       </td>
-      <td>{{ pet.name }}</td>
+      <td>
+        <span class="font-semibold">{{ pet.name }}</span>
+      </td>
       <td>
         @if (!!pet.coverImage) {
           <ui-image [type]="'avatar'"
@@ -53,6 +56,9 @@
       </td>
       <td>
         <p-tag *ngIf="pet.breed" [severity]="getSeverity()" [value]="pet.breed"/>
+      </td>
+      <td>
+        <button *ngIf="pet.images?.length" icon="fa fa-images" outlined pButton rounded severity="secondary"></button>
       </td>
       <td>
         <p-button (onClick)="deletePet(pet)" icon="fa fa-trash" outlined severity="danger"></p-button>
